# cpp-project

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/calculation/: FibonacciCalculator.cpp  FibonacciCalculator.h
src/processing/: Processor.cpp  Processor.h
src/user/: UserInput.cpp  UserInput.h
tests/: CMakeLists.txt
tests/calculation/: FibonacciCalculatorTest.cpp
tests/processing/: ProcessorTest.cpp
